<resources>
    <string name="app_name">News Eyepax</string>
    <string name="eyepax_news">Eyepax News</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype password</string>
    <string name="email_address">Email</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="latest_news">Latest News</string>
    <string name="long_text">asdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdasasdasdas</string>
    <string name="search">Search</string>
    <string name="details">Details</string>
    <string name="favorite">Favorite</string>
    <string name="filter">Filter</string>
    <string name="reset_all">reset all</string>
    <string name="reset">Reset</string>
    <string name="sortby">Sort by</string>
    <string name="save">save</string>
    <string name="Montserrat_Light">Montserrat-Light</string>
    <string name="Montserrat_Medium">Montserrat-Medium</string>
    <string name="Montserrat_Regular">Montserrat-Regular</string>
    <string name="Montserrat_SemiBold">Montserrat-SemiBold</string>
    <string name="USER_NOT_FOUND">User not found.</string>
    <string name="profile">Profile</string>
    <string name="lblUsername">Username</string>
    <string name="lblPassword">Password</string>
    <string name="notification_logo" />
    <string name="n_a">N/A</string>
    <string name="logout">Logout</string>
    <string name="see_more">See more</string>
</resources>