<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.eyepax.newsapp.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_newsDetailFragment"
            app:destination="@id/newsDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.eyepax.newsapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_newsDetailFragment"
            app:destination="@id/newsDetailFragment" />
        <action
            android:id="@+id/action_navigation_dashboard_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.eyepax.newsapp.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/newsDetailFragment"
        android:name="com.eyepax.newsapp.ui.detail.NewsDetailFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_news_detail">
        <argument
            android:name="article"
            app:argType="com.eyepax.newsapp.model.Article"/>
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.eyepax.newsapp.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_newsDetailFragment"
            app:destination="@id/newsDetailFragment" />
        <argument
            android:name="search"
            app:argType="string" />
    </fragment>
</navigation>