<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@null"
        android:paddingTop="@dimen/padding"
        app:endIconMode="clear_text"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/rounded_filter_white"
            android:text="senelsmash"
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:id="@+id/tiFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:paddingTop="@dimen/padding"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/rounded_filter_white"
            android:text="senel"
            android:id="@+id/etFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:id="@+id/tiLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:paddingTop="@dimen/padding"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/rounded_filter_white"
            android:text="perera"
            android:id="@+id/etLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:id="@+id/tiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="clear_text"
        android:paddingTop="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiLastname">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/rounded_filter_white"
            android:text="abc123"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:id="@+id/tiReTypePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/retype_password"
        app:endIconMode="clear_text"
        android:paddingTop="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/rounded_filter_white"
            android:text="abc123"
            android:id="@+id/etRetypePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:id="@+id/tiEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        android:hint="@string/email_address"
        android:paddingTop="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiReTypePassword">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/rounded_filter_white"
            android:text="senelsmash@gmail.com"
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>