<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:paddingBottom="32dp"
    android:id="@+id/bottomSheet"
    app:behavior_hideable="true"
    app:behavior_peekHeight="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="@dimen/padding"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <TextView
            android:textColor="@color/text_black"
            android:textStyle="bold"
            android:textSize="@dimen/text_large"
            android:text="@string/filter"
            android:id="@+id/tvFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnReset"
            android:text="@string/reset"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_medium"
            android:text="@string/sortby"
            android:id="@+id/tvSortby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnReset"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.chip.ChipGroup
            app:singleSelection="true"
            android:id="@+id/chipGroup"
            app:layout_constraintTop_toBottomOf="@id/tvSortby"
            app:layout_constraintBottom_toTopOf="@id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <com.google.android.material.chip.Chip
                android:id="@+id/chipRecommended"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Recommended" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLatest"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Latest" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMostViewed"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Most viewed" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipChannel"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Channel" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFollowing"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Following" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSearch"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>