<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/searchViewWidget"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_height"
            android:layout_margin="@dimen/margin_low"
            android:layout_weight="1"
            android:background="@drawable/bg_search_view"
            android:drawableEnd="@drawable/ic_search"
            android:hint="@string/search"
            android:paddingStart="@dimen/margin_medium"
            android:paddingEnd="@dimen/margin_medium"
            android:textColorHint="@color/colorTextSearch" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margin_low"
            android:background="@drawable/bg_notification"
            android:contentDescription="@string/notification_logo"
            android:src="@drawable/ic_notifications" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/searchViewContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/etSearchView"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_search"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toStartOf="@id/ivNotification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/search" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/searchContainer"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="@id/etSearchView"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="@id/ivNotification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivNotification"
        android:visibility="gone"
        android:layout_width="@dimen/notification"
        android:layout_height="@dimen/notification"
        android:src="@drawable/ic_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvLatestNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_low"
                android:text="@string/latest_news"
                android:textAlignment="textStart"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_large"
                android:fontFamily="@font/playfair_display_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSeeAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_low"
                android:text="@string/see_more"
                android:textAlignment="textStart"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_small"
                android:fontFamily="@font/nunito"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tvLatestNews"
                app:layout_constraintTop_toTopOf="@+id/tvLatestNews" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopHeadlines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_low"
                android:layout_marginBottom="@dimen/margin_low"
                app:layout_constraintTop_toBottomOf="@+id/tvLatestNews" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_low"
                android:layout_marginBottom="@dimen/margin_low"
                app:layout_constraintBottom_toTopOf="@id/rvNewsList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvTopHeadlines" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNewsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_low"
                android:layout_marginBottom="58dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvFilter" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>